--- a/git_clone_stats/static/index.html
+++ b/git_clone_stats/static/index.html
@@ -94,11 +94,11 @@
                     <option value="uniques-asc">Least Uniques</option>
                 </select>
             </div>
-            <button id="sync-button" class="sync-btn">
+            <button id="sync-button" class="btn btn-primary sync-btn">
                 <i class="fas fa-sync-alt"></i>
                 <span>Sync Data</span>
             </button>
-            <button id="manage-repos-button" class="manage-repos-btn">
+            <button id="manage-repos-button" class="btn btn-primary manage-repos-btn">
                 <i class="fas fa-cog"></i>
                 <span>Manage Repos</span>
             </button>
@@ -122,7 +122,7 @@
                     </select>
                 </div>
                 <div class="filter-group">
-                    <button id="refresh-chart-btn" class="refresh-chart-btn">
+                    <button id="refresh-chart-btn" class="btn btn-primary btn-sm refresh-chart-btn">
                         <i class="fas fa-sync-alt"></i>
                         Refresh Chart
                     </button>
@@ -162,7 +162,7 @@
                     <h3>Add New Repository</h3>
                     <div class="add-repo-form">
                         <input type="text" id="new-repo-input" placeholder="Enter repository name (e.g., my-repo)" />
-                        <button id="add-repo-btn" class="add-btn">
+                        <button id="add-repo-btn" class="btn btn-primary add-btn">
                             <i class="fas fa-plus"></i>
                             Add Repository
                         </button>
@@ -180,13 +180,13 @@
                 <div class="backup-section">
                     <h3>Backup & Restore</h3>
                     <div class="backup-controls">
-                        <button id="export-btn" class="backup-btn export-btn">
+                        <button id="export-btn" class="btn btn-primary backup-btn export-btn">
                             <i class="fas fa-download"></i>
                             Export Data
                         </button>
                         <div class="import-section">
                             <input type="file" id="import-file" accept=".json" style="display: none;">
-                            <button id="import-btn" class="backup-btn import-btn">
+                            <button id="import-btn" class="btn btn-success backup-btn import-btn">
                                 <i class="fas fa-upload"></i>
                                 Import Data
                             </button>
