--- a/git_clone_stats/static/repo-card-template.html
+++ b/git_clone_stats/static/repo-card-template.html
@@ -38,7 +38,7 @@
     <div class="badge-preview">
         <img src="{{badgeUrl}}" alt="Clone badge for {{repo.name}}" />
     </div>
-    <button class="copy-btn" onclick="copyToClipboard('{{markdownCode}}', this)">
+    <button class="btn btn-primary copy-btn" onclick="copyToClipboard('{{markdownCode}}', this)">
         <i class="fas fa-copy"></i>
         Copy Markdown
     </button>
