--- a/git_clone_stats/static/repo-card-template.html
+++ b/git_clone_stats/static/repo-card-template.html
@@ -15,8 +15,16 @@
         <div class="stat-label-small">Total Clones</div>
     </div>
     <div class="stat-item">
-        <div class="stat-number">{{repo.total_uniques}}</div>
+        <div class="stat-number">{{repo.total_unique_clones}}</div>
         <div class="stat-label-small">Unique Cloners</div>
+    </div>
+    <div class="stat-item">
+        <div class="stat-number">{{repo.total_views}}</div>
+        <div class="stat-label-small">Total Views</div>
+    </div>
+    <div class="stat-item">
+        <div class="stat-number">{{repo.total_unique_views}}</div>
+        <div class="stat-label-small">Unique Visitors</div>
     </div>
 </div>
 
