--- a/git_clone_stats/static/index.html
+++ b/git_clone_stats/static/index.html
@@ -190,7 +190,16 @@
                 <div class="add-repo-section">
                     <h3>Add New Repository</h3>
                     <div class="add-repo-form">
-                        <input type="text" id="new-repo-input" placeholder="Enter repository name (e.g., my-repo)" />
+                        <div class="form-group">
+                            <input type="text" id="new-repo-input" placeholder="Enter repository name (e.g., my-repo)" />
+                        </div>
+                        <div class="form-group owner-type-group" id="owner-type-group" style="display: none;">
+                            <label for="owner-type-select">Owner Type:</label>
+                            <select id="owner-type-select">
+                                <option value="user">Personal Repository</option>
+                                <option value="org">Organization Repository</option>
+                            </select>
+                        </div>
                         <button id="add-repo-btn" class="btn btn-primary add-btn">
                             <i class="fas fa-plus"></i>
                             Add Repository
